# vectorCalculusCpp

./: CMakeLists.txt
lib/: CMakeLists.txt  alias.cpp  vec.cpp  vecs.cpp
lib/inc/: alias.hpp  vec.hpp  vecs.hpp
src/: CMakeLists.txt  unitTesting.cpp
